# vinyl-cast

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  build.gradle  gradle.properties  privacy-policy.html  settings.gradle
_sass/: _devices.scss
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/schober/vinylcast/: ApplicationTest.java
app/src/androidTest/java/tech/schober/vinylcast/: ApplicationTest.java
app/src/githubDebug/java/tech/schober/vinylcast/: VinylCastApplicationBase.java
app/src/githubRelease/java/tech/schober/vinylcast/: VinylCastApplicationBase.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FullDuplexPassthru.h  FullDuplexStream.cpp  FullDuplexStream.h  NativeAudioEngine.cpp  NativeAudioEngine.h  jni_bridge.cpp
app/src/main/java/com/schober/vinylcast/: AudioRecordTask.java  CastOptionsProvider.java  ConvertAudioRunnable.java  Helpers.java  MainActivity.java  MediaRecorderService.java  (+4 more)
app/src/main/res/drawable/: ic_info_outline_accent2_24dp.xml  ic_record_black_100dp.xml  ic_warning_accent2_24dp.xml  no_album_image.xml
app/src/main/res/font/: ibm_plex_sans.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  audio_devices.xml  pref_widget_button.xml  pref_widget_info_button.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
audio-device/: build.gradle
audio-device/src/main/res/layout/: audio_devices.xml
audio-device/src/main/res/values/: strings.xml
debug-utils/: logging_macros.h
docs/: index.html  privacy-policy.html
gradle/wrapper/: gradle-wrapper.properties
themes/default/: index.html
(+61 files in other folders)
